--- a/index.html
+++ b/index.html
@@ -87,17 +87,21 @@
     <!-- banner end  -->
     <!-- middle section start  -->
     <div class="container d-flex justify-content-around  mt-5">
-        <div class="row d-flex align-items-center">
+        <div class="row row-cols-1 row-cols-md-4 g-4">
             <div class="col">
-                <img src="images/wedding.png" class="img-fluid" alt="">
+                <div class="card h-100 rounded">
+                    <img src="images/wedding.png" class="img-fluid" alt="">
+                </div>
             </div>
             <div class="col">
-                <h1>Every moment is Precious</h1>
-                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                    duis enim velit
-                    mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                <button type="button" class="text-white bg-primary border-0 px-3 py-2">Explore our album <i
-                        class="fa-solid fa-right-long"></i> </button>
+                <div class="card h-100 rounded">
+                    <h1>Every moment is Precious</h1>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                        duis enim velit
+                        mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <button type="button" class="text-white bg-primary border-0 px-3 py-2">Explore our album <i
+                            class="fa-solid fa-right-long"></i> </button>
+                </div>
             </div>
         </div>
     </div>
@@ -248,7 +252,7 @@
     <h1 class="text-center m-5">Frequently Asked Questions</h1>
 
     <div class="container d-flex justify-content-around  m-5">
-        <div class="row d-flex align-items-center">
+        <div class="row row-cols-1 row-cols-md-4 g-4">
             <div class="col">
                 <div class="accordion" id="accordionPanelsStayOpenExample">
                     <div class="accordion-item">
